--- a/templates/result.html
+++ b/templates/result.html
@@ -2,5 +2,5 @@
 {%block title%}Результат{%endblock%}
 {%block content%}
 <h1>Результат обработки {{video.source_video}}</h1>
-
+<div align="center"><img src="{%url 'stream' camera_id%}" id="video"></div>
 {%endblock%}
